; ModuleID = '/home/carl/AnghaBench/linux/net/ipv4/extr_fib_trie.c_get_index.c'
source_filename = "/home/carl/AnghaBench/linux/net/ipv4/extr_fib_trie.c_get_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.key_vector = type { i64, i64 }

@BITS_PER_LONG = common dso_local global i64 0, align 8
@KEYLENGTH = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, %struct.key_vector*)* @get_index to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @get_index(i64 %0, %struct.key_vector* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.key_vector*, align 8
  %6 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store %struct.key_vector* %1, %struct.key_vector** %5, align 8
  %7 = load i64, i64* %4, align 8
  %8 = load %struct.key_vector*, %struct.key_vector** %5, align 8
  %9 = getelementptr inbounds %struct.key_vector, %struct.key_vector* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = xor i64 %7, %10
  store i64 %11, i64* %6, align 8
  %12 = load i64, i64* @BITS_PER_LONG, align 8
  %13 = load i64, i64* @KEYLENGTH, align 8
  %14 = icmp sle i64 %12, %13
  br i1 %14, label %15, label %22

15:                                               ; preds = %2
  %16 = load i64, i64* @KEYLENGTH, align 8
  %17 = load %struct.key_vector*, %struct.key_vector** %5, align 8
  %18 = getelementptr inbounds %struct.key_vector, %struct.key_vector* %17, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  %20 = icmp eq i64 %16, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %15
  store i64 0, i64* %3, align 8
  br label %28

22:                                               ; preds = %15, %2
  %23 = load i64, i64* %6, align 8
  %24 = load %struct.key_vector*, %struct.key_vector** %5, align 8
  %25 = getelementptr inbounds %struct.key_vector, %struct.key_vector* %24, i32 0, i32 1
  %26 = load i64, i64* %25, align 8
  %27 = lshr i64 %23, %26
  store i64 %27, i64* %3, align 8
  br label %28

28:                                               ; preds = %22, %21
  %29 = load i64, i64* %3, align 8
  ret i64 %29
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
